--- a/PaginaWebLaboratorio/PaginaWebLaboratorio.vcxproj.filters
+++ b/PaginaWebLaboratorio/PaginaWebLaboratorio.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="GestorCalificaciones.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="GestorSimulacion.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -75,6 +78,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="GestorCalificaciones.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="GestorSimulacion.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
